--- a/statslib.html
+++ b/statslib.html
@@ -49,6 +49,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#statshead").load("statslib_header.html")
             $("#myfooter").load("footer.html")
         });
     </script>
@@ -70,16 +71,9 @@ pre {
     <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <ol class="breadcrumb">
-                    <li><a href="https://www.kthohr.com">Home</a></li>
-                    <li class="active">StatsLib</li>
-                </ol>
-            </div>
-        </div>
-        <!-- /.row -->
+        <div id="statshead"></div>
 
+<!--  -->
 
 <div class="row">
     <div class="col-md-2"></div>
