--- a/statslib_docs_pois.html
+++ b/statslib_docs_pois.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>StatsLib: Beta Distribution</title>
+    <title>StatsLib: Poisson Distribution</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@ pre {
     <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">StatsLib: Beta Distribution</strong></h4></a>
+                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">StatsLib: Poisson Distribution</strong></h4></a>
             </div>
             <div id="collapse1" class="panel-collapse collapse">
                 <div class="panel-body">
@@ -116,16 +116,14 @@ pre {
 
 <h3 style="text-align: left;" id="intro"><strong style="font-size: 120%;">Introduction</strong></h3>
 
-<p>The density function of the Normal (Gaussian) distribution:</p>
+<p>The density function of the Poisson distribution:</p>
 $$
-    f(x; \alpha, \beta) = \frac{1}{\mathcal{B}(\alpha,\beta)} x^{\alpha - 1} (1-x)^{\beta-1}
+    f(x; \lambda) = \dfrac{\lambda^x \exp(-\lambda)}{x!} \times \mathbf{1}[ x \geq 0]
 $$
-<p>where $\mathcal{B}(\alpha,\beta)$ is the beta function.</p>
 
 <p>Parameters:</p>
 <ul>
-    <li><code>a_par</code> is $\alpha$</li>
-    <li><code>b_par</code> is $\beta$</li>
+    <li><code>rate_par</code> is $\lambda$. Note: this need not be an integer.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -138,9 +136,9 @@ $$
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
-template&lt;typename Ta, typename Tb&gt;
+template&lt;typename T&gt;
 statslib_constexpr
-return_t&lt;Ta&gt; dbeta(const Ta x, const Tb a_par, const Tb b_par, const bool log_form = false);
+return_t&lt;T&gt; dpois(const uint_t x, const T rate_par, const bool log_form = false);
 </pre>
 
 <p>Computes the density function.</p>
@@ -148,21 +146,20 @@ return_t&lt;Ta&gt; dbeta(const Ta x, const Tb a_par, const Tb b_par, const bool 
 <hr>
 
 <p><strong>Examples:</strong></p>
-<pre class="brush: cpp;"> 
+<pre class="brush: cpp;">
 // parameters
-double alpha = 3.0;
-double beta  = 2.0;
+double rate = 14.0;
 
 // standard input
-double dens_val = stats::dbeta(0.5,alpha,beta);
-double log_dens_val = stats::dbeta(0.5,alpha,beta,true);
+double dens_val = stats::dpois(10,rate);
+double log_dens_val = stats::dpois(10,rate,true);
 
 // Armadillo input
 arma::mat X(10,1);
-X.fill(0.5);
+X.fill(10);
 
-arma::mat dens_vals_mat = stats::dbeta(X,alpha,beta);
-arma::mat log_dens_vals_mat = stats::dbeta(X,alpha,beta,true);
+arma::mat dens_vals_mat = stats::dpois(X,rate);
+arma::mat log_dens_vals_mat = stats::dpois(X,rate,true);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -175,9 +172,9 @@ arma::mat log_dens_vals_mat = stats::dbeta(X,alpha,beta,true);
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
-template&lt;typename Ta, typename Tb&gt;
+template&lt;typename T&gt;
 statslib_constexpr
-return_t&lt;Ta&gt; pbeta(const Ta x, const Tb a_par, const Tb b_par, const bool log_form = false);
+return_t&lt;T&gt; ppois(const uint_t x, const T rate_par, const bool log_form = false);
 </pre>
 
 <p>Computes the cumulative distribution function (CDF).</p>
@@ -187,19 +184,18 @@ return_t&lt;Ta&gt; pbeta(const Ta x, const Tb a_par, const Tb b_par, const bool 
 <p><strong>Examples:</strong></p>
 <pre class="brush: cpp;">
 // parameters
-double alpha = 3.0;
-double beta  = 2.0;
+double rate = 14.0;
 
 // standard input
-double prob_val = stats::pbeta(0.5,alpha,beta);
-double log_prob_val = stats::pbeta(0.5,alpha,beta,true);
+double prob_val = stats::ppois(15,rate);
+double log_prob_val = stats::ppois(15,rate,true);
 
 // Armadillo input
 arma::mat X(10,1);
-X.fill(0.5);
+X.fill(15);
 
-arma::mat prob_vals_mat = stats::pbeta(X,alpha,beta);
-arma::mat log_prob_vals_mat = stats::pbeta(X,alpha,beta,true);
+arma::mat prob_vals_mat = stats::ppois(X,rate);
+arma::mat log_prob_vals_mat = stats::ppois(X,rate,true);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -212,9 +208,9 @@ arma::mat log_prob_vals_mat = stats::pbeta(X,alpha,beta,true);
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
-template&lt;typename Ta, typename Tb&gt;
+template&lt;typename Ta, typename Tb, typename Tc = uint_t&gt;
 statslib_constexpr
-Ta qbeta(const Ta p, const Tb a_par, const Tb b_par);
+Tc qpois(const Ta p, const Tb rate_par);
 </pre>
 
 <p>Computes the quantile function.</p>
@@ -222,19 +218,18 @@ Ta qbeta(const Ta p, const Tb a_par, const Tb b_par);
 <hr>
 
 <p><strong>Examples:</strong></p>
-<pre class="brush: cpp;"> 
+<pre class="brush: cpp;">
 // parameters
-double alpha = 3.0;
-double beta  = 2.0;
+double rate = 14.0;
 
 // standard input
-double quant_val = stats::qbeta(0.7,alpha,beta);
+double quant_val = stats::qpois(0.7,rate);
 
 // Armadillo input
 arma::mat X(10,1);
 X.fill(0.7);
 
-arma::mat quant_vals_mat = stats::qbeta(X,alpha,beta);
+arma::mat quant_vals_mat = stats::qpois(X,rate);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -250,17 +245,17 @@ arma::mat quant_vals_mat = stats::qbeta(X,alpha,beta);
 // random engine seeding
 template&lt;typename T&gt;
 statslib_inline
-return_t&lt;T&gt; rbeta(const T a_par, const T b_par, rand_engine_t& engine);
+return_t&lt;T&gt; rpois(const T rate_par, rand_engine_t& engine);
 
 // seeding values
 template&lt;typename T&gt;
 statslib_inline
-return_t&lt;T&gt; rbeta(const T a_par, const T b_par, uint_t seed_val = std::random_device{}());
+return_t&lt;T&gt; rpois(const T rate_par, uint_t seed_val = std::random_device{}());
 
 // matrix output
 template&lt;typename mT, typename eT&gt;
 statslib_inline
-mT rbeta(const uint_t n, const uint_t k, const eT a_par, const eT b_par);
+mT rpois(const uint_t n, const uint_t k, const eT rate_par);
 </pre>
 
 <p>Generates pseudo-random draws.</p>
@@ -270,14 +265,13 @@ mT rbeta(const uint_t n, const uint_t k, const eT a_par, const eT b_par);
 <p><strong>Examples:</strong></p>
 <pre class="brush: cpp;">
 // parameters
-double alpha = 3.0;
-double beta  = 2.0;
+double rate = 14.0;
 
 // standard input
-double rand_val = stats::rbeta(alpha,beta);
+double rand_val = stats::rpois(rate);
 
 // Armadillo output: 10 x 1 matrix
-arma::mat rand_mat = stats::rbeta&lt;arma::mat&gt;(10,1,alpha,beta);
+arma::mat rand_mat = stats::rchisq&lt;arma::mat&gt;(10,1,rate);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
