--- a/statslib_docs_binom.html
+++ b/statslib_docs_binom.html
@@ -227,7 +227,7 @@ double prob_par = 0.6;
 unsigned int n_trials = 4;
 
 // standard input
-double quant_val = stats::qbinom(0.7,n_trials,prob_par);
+int quant_val = stats::qbinom(0.7,n_trials,prob_par);
 
 // Armadillo input
 arma::mat X(10,1);
