--- a/statslib_docs_f.html
+++ b/statslib_docs_f.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>StatsLib: F Distribution</title>
+    <title>StatsLib: F-Distribution</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@ pre {
     <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">StatsLib: F Distribution</strong></h4></a>
+                <a data-toggle="collapse" href="#collapse1"><h4><strong style="font-size: 120%;">StatsLib: F-Distribution</strong></h4></a>
             </div>
             <div id="collapse1" class="panel-collapse collapse">
                 <div class="panel-body">
@@ -116,7 +116,7 @@ pre {
 
 <h3 style="text-align: left;" id="intro"><strong style="font-size: 120%;">Introduction</strong></h3>
 
-<p>The density function of the F distribution:</p>
+<p>The density function of the F-distribution:</p>
 $$
     f(x; d_1, d_2) = \frac{1}{\mathcal{B} \left( \frac{d_1}{2}, \frac{d_2}{2} \right)} \left( \frac{d_1}{d_2} \right)^{\frac{d_1}{2}} x^{d_1/2 - 1} \left(1 + \frac{d_1}{d_2} x \right)^{- \frac{d_1+d_2}{2}} \times \mathbf{1} [x \geq 0]
 $$
@@ -153,12 +153,12 @@ double df1 = 10.0;
 double df2 = 12.0;
 
 // standard input
-double dens_val = stats::df(0.5,df1,df2);
-double log_dens_val = stats::df(0.5,df1,df2,true);
+double dens_val = stats::df(1.5,df1,df2);
+double log_dens_val = stats::df(1.5,df1,df2,true);
 
 // Armadillo input
 arma::mat X(10,1);
-X.fill(0.5);
+X.fill(1.5);
 
 arma::mat dens_vals_mat = stats::df(X,df1,df2);
 arma::mat log_dens_vals_mat = stats::df(X,df1,df2,true);
@@ -190,12 +190,12 @@ double df1 = 10.0;
 double df2 = 12.0;
 
 // standard input
-double prob_val = stats::pf(0.5,df1,df2);
-double log_prob_val = stats::pf(0.5,df1,df2,true);
+double prob_val = stats::pf(1.5,df1,df2);
+double log_prob_val = stats::pf(1.5,df1,df2,true);
 
 // Armadillo input
 arma::mat X(10,1);
-X.fill(0.5);
+X.fill(1.5);
 
 arma::mat prob_vals_mat = stats::pf(X,df1,df2);
 arma::mat log_prob_vals_mat = stats::pf(X,df1,df2,true);
@@ -276,7 +276,7 @@ double df2 = 12.0;
 double rand_val = stats::rf(df1,df2);
 
 // Armadillo output: 10 x 1 matrix
-arma::mat rand_mat = stats::rchisq&lt;arma::mat&gt;(10,1,df1,df2);
+arma::mat rand_mat = stats::rf&lt;arma::mat&gt;(10,1,df1,df2);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
