--- a/statslib.html
+++ b/statslib.html
@@ -138,29 +138,29 @@ pre {
 
 <p>Functions to compute the cdf, pdf, and quantile, as well as random sampling, are available for the following distributions:</p>
 <ul>
-    <li>Bernoulli</li>
-    <li>Beta</li>
-    <li>Binomial</li>
-    <li>Cauchy</li>
-    <li>Chi-squared</li>
-    <li>Exponential</li>
-    <li>F</li>
-    <li>Gamma</li>
-    <li>inverse-Gamma</li>
-    <li>Laplace</li>
-    <li>Logistic</li>
-    <li>Log-Normal</li>
-    <li>Normal (Gaussian)</li>
-    <li>Poisson</li>
-    <li>Student's t</li>
-    <li>Uniform</li>
-    <li>Weibull</li>
+    <li><a href="statslib_docs_bern.html" target="_blank">Bernoulli</a></li>
+    <li><a href="statslib_docs_beta.html" target="_blank">Beta</a></li>
+    <li><a href="statslib_docs_binom.html" target="_blank">Binomial</a></li>
+    <li><a href="statslib_docs_cauchy.html" target="_blank">Cauchy</a></li>
+    <li><a href="statslib_docs_chisq.html" target="_blank">Chi-squared</a></li>
+    <li><a href="statslib_docs_exp.html" target="_blank">Exponential</a></li>
+    <li><a href="statslib_docs_f.html" target="_blank">F</a></li>
+    <li><a href="statslib_docs_gamma.html" target="_blank">Gamma</a></li>
+    <li><a href="statslib_docs_invgamma.html" target="_blank">Inverse-Gamma</a></li>
+    <li><a href="statslib_docs_laplace.html" target="_blank">Laplace</a></li>
+    <li><a href="statslib_docs_lnorm.html" target="_blank">Log-Normal</a></li>
+    <li><a href="statslib_docs_logis.html" target="_blank">Logistic</a></li>
+    <li><a href="statslib_docs_norm.html" target="_blank">Normal</a></li>
+    <li><a href="statslib_docs_pois.html" target="_blank">Poisson</a></li>
+    <li><a href="statslib_docs_t.html" target="_blank">Student t</a></li>
+    <li><a href="statslib_docs_unif.html" target="_blank">Uniform</a></li>
+    <li><a href="statslib_docs_weibull.html" target="_blank">Weibull</a></li>
 </ul>
 In addition, pdf and randomization functions are available for several multivariate distributions:
 <ul>
-    <li>inverse-Wishart</li>
-    <li>Multivariate Normal</li>
-    <li>Wishart</li>
+    <li><a href="statslib_docs_invwish.html" target="_blank">Inverse-Wishart</a></li>
+    <li><a href="statslib_docs_mvnorm.html" target="_blank">Multivariate Normal</a></li>
+    <li><a href="statslib_docs_wish.html" target="_blank">Wishart</a></li>
 </ul>
 
 <hr>
