--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <span style="float:right;">
                             <a href="https://github.com/kthohr" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a>
                             <a href="https://gitlab.com/kthohr" target="_blank"><i class="fa fa-gitlab fa-2x" style="color:black"></i></a>
-                            <a href="https://bitbucket.org/kthohr/" target="_blank"><i class="fa fa-bitbucket fa-2x" style="color:black"></i></a>
+                            <!-- <a href="https://bitbucket.org/kthohr/" target="_blank"><i class="fa fa-bitbucket fa-2x" style="color:black"></i></a> -->
                         </span></h4>
                     </div>
                     <div class="panel-body">
