--- a/statslib_docs_binom.html
+++ b/statslib_docs_binom.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
-    <title>StatsLib: Bernoulli Distribution</title>
+    <title>StatsLib: Binomial Distribution</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
