--- a/statslib_docs_beta.html
+++ b/statslib_docs_beta.html
@@ -116,7 +116,7 @@ pre {
 
 <h3 style="text-align: left;" id="intro"><strong style="font-size: 120%;">Introduction</strong></h3>
 
-<p>The density function of the Normal (Gaussian) distribution:</p>
+<p>The density function of the Beta distribution:</p>
 $$
     f(x; \alpha, \beta) = \frac{1}{\mathcal{B}(\alpha,\beta)} x^{\alpha - 1} (1-x)^{\beta-1}
 $$
