--- a/statslib_docs_unif.html
+++ b/statslib_docs_unif.html
@@ -116,7 +116,7 @@ pre {
 
 <h3 style="text-align: left;" id="intro"><strong style="font-size: 120%;">Introduction</strong></h3>
 
-<p>The density function of the Normal (Gaussian) distribution:</p>
+<p>The density function of the Uniform distribution:</p>
 $$
     f(x; a,b) = \frac{1}{b-a} \times \mathbf{1}[ a \leq x \leq b]
 $$
