--- a/statslib_docs_f.html
+++ b/statslib_docs_f.html
@@ -240,7 +240,7 @@ arma::mat quant_vals_mat = stats::qf(X,df1,df2);
 
 <!--  -->
 
-<h3 style="text-align: left;" id="density"><strong style="font-size: 120%;">Random Sampling</strong></h3>
+<h3 style="text-align: left;" id="random"><strong style="font-size: 120%;">Random Sampling</strong></h3>
 
 <br>
 
