--- a/statslib_docs_invwish.html
+++ b/statslib_docs_invwish.html
@@ -163,7 +163,7 @@ arma::mat log_dens_vals_mat = stats::dinvwish(X,Psi,nu,true);
 
 <!--  -->
 
-<h3 style="text-align: left;" id="density"><strong style="font-size: 120%;">Random Sampling</strong></h3>
+<h3 style="text-align: left;" id="random"><strong style="font-size: 120%;">Random Sampling</strong></h3>
 
 <br>
 
