--- a/statslib_docs_pois.html
+++ b/statslib_docs_pois.html
@@ -236,7 +236,7 @@ arma::mat quant_vals_mat = stats::qpois(X,rate);
 
 <!--  -->
 
-<h3 style="text-align: left;" id="density"><strong style="font-size: 120%;">Random Sampling</strong></h3>
+<h3 style="text-align: left;" id="random"><strong style="font-size: 120%;">Random Sampling</strong></h3>
 
 <br>
 
