--- a/statslib.html
+++ b/statslib.html
@@ -256,7 +256,9 @@ cd dens
 
 <hr>
 
-All of these functions have matrix-based equivalents using Armadillo, Blaze, and Eigen dense matrices.
+<h4 style="text-align: left;"><strong style="font-size: 95%;">Matrices</strong></h3>
+
+<p>All of these functions have matrix-based equivalents using Armadillo, Blaze, and Eigen dense matrices.</p>
 
 <ul>
     <li>The pdf, cdf, and quantile functions can take matrix-valued arguments. For example,</li>
@@ -277,7 +279,9 @@ All of these functions have matrix-based equivalents using Armadillo, Blaze, and
 
 <hr>
 
-Random number seeding is available in two forms: seed values or random number engines (preferred).
+<h4 style="text-align: left;"><strong style="font-size: 95%;">Seeding</strong></h3>
+
+<p>Random number seeding is available in two forms: seed values or random number engines (preferred).</p>
 
 <ul>
     <li>Seed values are passed as unsigned integers. For example, to generate a draw from a normal distribution N(1,2) with seed value 1776:</li>
