--- a/gcem.html
+++ b/gcem.html
@@ -151,7 +151,7 @@ pre {
 <h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 
 <ul>
-    <li>GCE-Math is a <strong>header-only library</strong>. Simply include the gcem header files with your project.</li>
+    <li>GCE-Math is a <strong>header-only library</strong>. Simply <code>#include</code> the gcem header files with your project.</li>
     <li>The source code is available on <a href="https://github.com/kthohr/gcem" target="_blank">GitHub</a>.</li>
     <pre class="brush: bash;">
     git clone -b master --single-branch https://github.com/kthohr/gcem ./gcem</pre>
