--- a/statslib.html
+++ b/statslib.html
@@ -281,7 +281,7 @@ cd dens
 
 <h4 style="text-align: left;"><strong style="font-size: 95%;">Seeding</strong></h3>
 
-<p>Random number seeding is available in two forms: seed values or random number engines (preferred).</p>
+<p>Random number seeding is available in two forms: seed values and random number engines.</p>
 
 <ul>
     <li>Seed values are passed as unsigned integers. For example, to generate a draw from a normal distribution N(1,2) with seed value 1776:</li>
