--- a/statslib.html
+++ b/statslib.html
@@ -108,7 +108,7 @@ pre {
 
 <hr>
 
-<p>Features</p>
+<p><strong>Features</strong></p>
 <ul>
     <li>A header-only library of probability density functions, cumulative distribution functions, quantile functions, and random sampling methods.</li>
     <li>Functions are written in C++11 <code>constexpr</code> format.</li>
