update GitHub icons

--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="https://github.com/kthohr" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
-                        <a class="github-button" href="https://github.com/kthohr" data-count-href="/kthohr/followers" data-count-api="/users/kthohr#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @kthohr on GitHub">Follow @kthohr</a>
+                        <a class="github-button" href="https://github.com/kthohr" data-show-count="true" aria-label="Follow @kthohr on GitHub">Follow @kthohr</a>
                     </li>
                 </ul>
                 <hr>
