--- a/mcmclib.html
+++ b/mcmclib.html
@@ -80,9 +80,9 @@
         <!-- <p style="text-align: center;"><a href="https://github.com/kthohr/mcmc" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p> -->
         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/mcmc" target="_blank"><img src="https://travis-ci.org/kthohr/mcmc.svg?branch=master" alt="optim Build"></a>
         <a href="https://codecov.io/github/kthohr/mcmc?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/mcmc/coverage.svg?branch=master" alt="Coverage Status"></a></p>
-        <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/mcmc/subscription" data-icon="octicon-eye" data-count-href="/kthohr/mcmc/watchers" data-count-api="/repos/kthohr/mcmc#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/mcmc on GitHub">Watch</a>
-        <a class="github-button" href="https://github.com/kthohr/mcmc" data-icon="octicon-star" data-count-href="/kthohr/mcmc/stargazers" data-count-api="/repos/kthohr/mcmc#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/mcmc on GitHub">Star</a>
-        <a class="github-button" href="https://github.com/kthohr/mcmc/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/mcmc/network" data-count-api="/repos/kthohr/mcmc#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/mcmc on GitHub">Fork</a></p>
+        <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/mcmc/subscription" data-icon="octicon-eye" data-show-count="true" aria-label="Watch kthohr/mcmc on GitHub">Watch</a>
+        <a class="github-button" href="https://github.com/kthohr/mcmc" data-icon="octicon-star" data-show-count="true" aria-label="Star kthohr/mcmc on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/kthohr/mcmc/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork kthohr/mcmc on GitHub">Fork</a></p>
     </div>
     <div class="col-md-3 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
