--- a/statslib_header.html
+++ b/statslib_header.html
@@ -28,6 +28,7 @@
                     <li><a href="statslib_docs_wish.html">Wishart</a></li>
                 </ul>
             </li>
+            <li><a href="statslib_comptime.html">Compile-time Features</a></li>
         </ol>
     </div>
 </div>
