--- a/gcem.html
+++ b/gcem.html
@@ -86,9 +86,9 @@ pre {
          <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/gcem" target="_blank"><img src="https://travis-ci.org/kthohr/gcem.svg?branch=master" alt="GCEM Build"></a> 
          <a href="https://codecov.io/github/kthohr/gcem?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/gcem/coverage.svg?branch=master" alt="Coverage Status"></a>
          </p>
-         <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/gcem/subscription" data-icon="octicon-eye" data-count-href="/kthohr/gcem/watchers" data-count-api="/repos/kthohr/gcem#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/gcem on GitHub">Watch</a> 
-         <a class="github-button" href="https://github.com/kthohr/gcem" data-icon="octicon-star" data-count-href="/kthohr/gcem/stargazers" data-count-api="/repos/kthohr/gcem#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/gcem on GitHub">Star</a> 
-         <a class="github-button" href="https://github.com/kthohr/gcem/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/gcem/network" data-count-api="/repos/kthohr/gcem#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/gcem on GitHub">Fork</a></p> 
+         <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/gcem/subscription" data-icon="octicon-eye" data-show-count="true" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/gcem on GitHub">Watch</a> 
+         <a class="github-button" href="https://github.com/kthohr/gcem" data-icon="octicon-star" data-show-count="true" aria-label="Star kthohr/gcem on GitHub">Star</a> 
+         <a class="github-button" href="https://github.com/kthohr/gcem/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork kthohr/gcem on GitHub">Fork</a></p> 
     </div>
     <div class="col-md-2 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
