--- a/optimlib.html
+++ b/optimlib.html
@@ -119,9 +119,9 @@
         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/optim" target="_blank"><img src="https://travis-ci.org/kthohr/optim.svg?branch=master" alt="optim Build"></a>
         <a href="https://codecov.io/github/kthohr/optim?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/optim/coverage.svg?branch=master" alt="Coverage Status"></a>
         </p>
-        <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/optim/subscription" data-icon="octicon-eye" data-count-href="/kthohr/optim/watchers" data-count-api="/repos/kthohr/optim#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/optim on GitHub">Watch</a>
-        <a class="github-button" href="https://github.com/kthohr/optim" data-icon="octicon-star" data-count-href="/kthohr/optim/stargazers" data-count-api="/repos/kthohr/optim#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/optim on GitHub">Star</a>
-        <a class="github-button" href="https://github.com/kthohr/optim/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/optim/network" data-count-api="/repos/kthohr/optim#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/optim on GitHub">Fork</a></p>
+        <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/optim/subscription" data-icon="octicon-eye" data-show-count="true" aria-label="Watch kthohr/optim on GitHub">Watch</a>
+        <a class="github-button" href="https://github.com/kthohr/optim" data-icon="octicon-star" data-show-count="true" aria-label="Star kthohr/optim on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/kthohr/optim/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork kthohr/optim on GitHub">Fork</a></p>
     </div>
     <div class="col-md-3 hidden-xs hidden-sm">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
