--- a/statslib_docs_t.html
+++ b/statslib_docs_t.html
@@ -118,7 +118,7 @@ pre {
 
 <p>The density function of Student's $t$ distribution:</p>
 $$
-    f(x; \nu) = \dfrac{\Gamma \left( \frac{\nu + 1}{2} \right)}{ \sqrt{\nu \pi} \Gamma \left( \frac{k}{2} \right)} \left( 1 + \frac{t^2}{\nu} \right)^{- \frac{\nu+1}{2}}
+    f(x; \nu) = \dfrac{\Gamma \left( \frac{\nu + 1}{2} \right)}{ \sqrt{\nu \pi} \Gamma \left( \frac{\nu}{2} \right)} \left( 1 + \frac{t^2}{\nu} \right)^{- \frac{\nu+1}{2}}
 $$
 
 <p>Parameters:</p>
