--- a/optimlib.html
+++ b/optimlib.html
@@ -148,10 +148,11 @@
 <ul>
     <li>C++11 library of local and global optimization algorithms, as well as root finding techniques.</li>
     <li>Derivative-free optimization using advanced, parallelized metaheuristics.</li>
-    <li>Constrained optimization routines can handle simple box constraints, or systems of nonlinear constraints.</li>
+    <li>Constrained optimization routines can handle simple box constraints, as well as systems of nonlinear constraints.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
     <li><a href="https://en.wikipedia.org/wiki/OpenMP" target="_blank">OpenMP</a>-accelerated algorithms for parallel computation.</li>
     <li>Straightforward linking with parallelized BLAS libraries, such as <a href="https://github.com/xianyi/OpenBLAS" target="_blank">OpenBLAS</a>.</li>
+    <li>Available in header-only format or as a linkable library.</li>
     <li>Released under a permissive, non-GPL license.</li>
 </ul>
 
@@ -219,6 +220,31 @@ set the following environment variable <strong>before</strong> running <code>con
 export ARMA_INCLUDE_PATH=/path/to/armadillo</pre>
 
 <p>Otherwise the build script will download the required files from the Armadillo GitLab repository.</p>
+
+<hr>
+
+<h4 style="text-align: left;"><strong style="font-size: 95%;">Header-only Version</strong></h3>
+
+<p>The library is also available in header-only format (i.e., without compiling a shared library). Simply run <code>configure</code> with the <code>--header-version</code> option:</p>
+
+<pre class="brush: bash;">
+./configure --header-version</pre>
+
+<p>This will create a new directory <samp>header_only_version</samp> that contains a header-only copy of OptimLib.</p>
+
+<hr>
+
+<h4 style="text-align: left;"><strong style="font-size: 95%;">R Compatibility</strong></h3>
+
+<p>To use OptimLib with your R package, first generate a header-only version of the library (see above). Then add the compiler definition <code>USE_RCPP_ARMADILLO</code> before you include the OptimLib files:</p>
+
+<pre class="brush: cpp;">
+#define USE_RCPP_ARMADILLO
+#include "optim.hpp"</pre>
+
+<p>Or you can set this preprocessor directive during compilation:</p>
+<pre class="brush: bash;">
+g++ ... -DUSE_RCPP_ARMADILLO ...</pre>
 
 <hr>
 
